engr441/while-infer/tests/valid/ArrayAssign_Valid_4.while
void main() {
     int[][] a1 = [[1,2,3],[0]];
     int[][] a2 = a1;
     a2[0] = [3,4,5];
     
     assert [1,2,3] == a1[0];
     assert [0] == a1[1];
     assert [3,4,5] == a2[0];
     assert [0] == a2[1];
}
