engr441/while-infer/tests/invalid-typing/Typing_Invalid_16.while
int f(int[] xs) {
    xs[false] = 1;
    return xs[0];
}